Correction du chevauchement du titre h1 et h2 dans la partie header en version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ input {
 
 h1 {
     width: 100%;
-    height: 26px;
+    height: auto;
     font-weight: 700;
     font-size: 1.5em;
     white-space: nowrap;
@@ -478,7 +478,7 @@ h5 {
         border-bottom: 3px solid #0065FC;
         padding-bottom: 30px;
     }
-
+    
     .filters {
         display: flex;
         flex-direction: column;
@@ -533,8 +533,8 @@ h5 {
 
     h1 {
         width: auto;
+        height: auto;
         white-space: pre-wrap;
-        padding-bottom: 25px;
     }
 
     h5 {
